--- a/style.css
+++ b/style.css
@@ -166,8 +166,8 @@ body {
 	}
 
 	.choice {
-		height: 450px;
-		width: 450px;
+		height: 250px;
+		width: 250px;
 	}
 
 	.choices {
@@ -184,6 +184,10 @@ body {
 		height: 100px;
 		font-size: 2rem;
 		margin: 5px;
+	}
+
+	.creator p {
+		font-size: 24px;
 	}
 }
 
